--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,6 +2,8 @@ name: Test
 on:
   schedule:
     - cron: "*/5 * * * *"
+  push:
+    branches: [main]
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -10,7 +12,10 @@ jobs:
     - uses: actions/setup-python@v2
       with:
         python-version: 3.9
-    - run: |
+    - env:
+        API_TOKEN: ${{ secrets.API_TOKEN }}
+        API_URL: ${{ secrets.API_URL }}
+      run: |
         python -m pip install --upgrade pip
         pip install requests
         python main.py
