--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Test
+name: Run Importer
 on:
   schedule:
     - cron: "*/5 * * * *"
@@ -13,9 +13,9 @@ jobs:
       with:
         python-version: 3.9
     - env:
-        API_TOKEN: ${{ secrets.API_TOKEN }}
-        API_URL: ${{ secrets.API_URL }}
+        LAMP_ACCESS_KEY: ${{ secrets.LAMP_ACCESS_KEY }}
+        LAMP_SECRET_KEY: ${{ secrets.LAMP_SECRET_KEY }}
+        LAMP_SERVER_ADDRESS: ${{ secrets.LAMP_SERVER_ADDRESS }}
       run: |
-        python -m pip install --upgrade pip
         pip install requests
         python main.py
