--- a/.github/workflows/importer.yml
+++ b/.github/workflows/importer.yml
@@ -3,7 +3,7 @@ on:
   schedule:
     - cron: "0 12 * * *"
   push:
-    branches: [main]
+    branches: [master]
 jobs:
   build:
     runs-on: ubuntu-latest
