--- a/.github/workflows/importer.yml
+++ b/.github/workflows/importer.yml
@@ -1,7 +1,7 @@
 name: Run Importer
 on:
   schedule:
-    - cron: "0 12 * * *"
+    - cron: "0 12 * * 1-5"
   push:
     branches: [master]
 jobs:
@@ -17,5 +17,9 @@ jobs:
         LAMP_SECRET_KEY: ${{ secrets.LAMP_SECRET_KEY }}
         LAMP_SERVER_ADDRESS: ${{ secrets.LAMP_SERVER_ADDRESS }}
       run: |
+        export SLEEP_MIN=$(($RANDOM / 1000))
+        echo "Sleeping for ${SLEEP_MIN}m..."
+        sleep "${SLEEP_MIN}m"
+        # Stagger the cron job invocation before running the code.
         pip install requests lamp-core
         python importer.py
