--- a/.github/workflows/importer.yml
+++ b/.github/workflows/importer.yml
@@ -17,7 +17,7 @@ jobs:
         LAMP_SECRET_KEY: ${{ secrets.LAMP_SECRET_KEY }}
         LAMP_SERVER_ADDRESS: ${{ secrets.LAMP_SERVER_ADDRESS }}
       run: |
-        export SLEEP_MIN=$(($RANDOM / 1000))
+        export SLEEP_MIN=$(($RANDOM / 5000)) # between 0-6 min ONLY
         echo "Sleeping for ${SLEEP_MIN}m..."
         sleep "${SLEEP_MIN}m"
         # Stagger the cron job invocation before running the code.
